# spbau-annoy

./: CMakeLists.txt  main.cpp
annoy/examples/: precision_test.cpp
annoy/src/: annoylib.h  config.json
